--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
 }
 
 .input1 {
-  @apply outline-none w-full py-4 px-3.5 relative rounded-lg border border-gray-400 border-opacity-30 placeholder-gray-400 font-normal leading-normal;
+  @apply outline-none w-full py-4 px-3.5 relative rounded-lg border border-opacity-30 placeholder-gray-400 font-normal leading-normal;
 }
 
 button:hover,
